Fix visibility being cut off on tools

--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -151,8 +151,6 @@ body {
 .gm_tools-content {
   flex: 1;
   padding: 0 1rem;
-  max-height: calc(100vh - 3rem - 55px);
-  overflow: hidden;
 }
 
 .gm_tools-container {
